Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body,
 * {
-  margin: 0;
+  margin: 1px;
   box-sizing: border-box;
 
   -webkit-font-smoothing: antialiased;
